[tool.poetry]
name = "iipyper"
version = "0.3.0"
description = "A Python package for rapid prototyping with MIDI and OSC"
authors = ["Victor Shepardson <victor.shepardson@gmail.com>", "Jack Armitage <jack.armitage@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Intelligent-Instruments-Lab/iipyper"
documentation = "https://intelligent-instruments-lab.github.io/iipyper/"

[tool.poetry.dependencies]
cffi = ">=1.17.1"
python = ">=3.10,<3.14"
python-rtmidi = "^1.5.7"
fire = ">=0.6.0,<0.8.0"
mido = "^1.3.0"
python-osc = "^1.8.3"
sounddevice = "^0.4.6"
textual = "^2.0.0"
pydantic = "^2.5.2"
pydantic-numpy = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
