[project]
name = "iipyper"
version = "0.5.0b0"
description = "A Python package for rapid prototyping with MIDI and OSC"
authors = [
    {name = "Victor Shepardson", email = "victor.shepardson@gmail.com"},
    {name = "Jack Armitage", email = "jack.armitage@me.com"}
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "cffi>=1.17.1",
    "python-rtmidi>=1.5.7,<2.0.0",
    "fire>=0.6.0,<0.8.0",
    "mido>=1.3.0,<2.0.0",
    "python-osc>=1.8.3,<2.0.0",
    "sounddevice>=0.4.6,<0.5.0",
    "textual>=2.0.0,<3.0.0",
    "pydantic>=2.5.2,<3.0.0",
    "pydantic-numpy>=8.0.0,<9.0.0",
]

[project.urls]
repository = "https://github.com/Intelligent-Instruments-Lab/iipyper"
documentation = "https://intelligent-instruments-lab.github.io/iipyper/"

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=6.0.4",
    "mkdocs-material>=9.4.8",
    "mkdocs-material-extensions>=1.3",
    "mkdocs-autorefs>=0.5.0",
]
